# tensorprobprog

./: README.md  alt.py  pyproject.toml  simple_trace.py  tensor_ops.py  tpp_trace.py  tvi.py
docs/: conf.py  index.rst
notebooks/: tvi.ipynb
notebooks/.ipynb_checkpoints/: tvi-checkpoint.ipynb
